# report-rollup

./: .env  .gitignore  Dockerfile  README.md  airgap_deployment_manifest.md  offline_setup.md  package_offline.sh  pyproject.toml  rag-reports.txt  roller.py  run_offline.sh  unroller.py.txt
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
chroma_store/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
idea-docs/: request.md
pir_search/: __init__.py  __main__.py  api_client.py  api_server.py  embedder.py  extractor.py  hybrid.py  llm.py  models.py  rag.py  reporter.py
pir_search/resources/: mock_articles.json
tests/: test_pipeline.py
