[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pir-search"
version = "0.1.0"
description = "PIR Intelligence Pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40",
    "sentence-transformers>=3.3",
    "einops",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2",
    "spacy>=3.8",
    "keybert>=0.8",
    "httpx>=0.28",
    "pydantic>=2.9",
    "chromadb>=0.6",
    "rich>=13",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.metadata]
allow-direct-references = true
